# practice_hw

./: примечание
hw1/hw1/install/: setup.sh
hw1/hw1/src/hw1_pkg/: package.xml  setup.cfg
hw1/hw1/src/hw1_pkg/test/: test_hw2_subscriber.py
hw1/src/hw1_pkg/: package.xml  setup.py
hw4+тесты/hw4/src/find_substring_positions_interfaces/action/: FindSubstringPositions.action
hw4/hw4/hw4/install/: local_setup.sh  setup.sh
hw4/hw4/hw4/src/find_substring_positions_interfaces/: CMakeLists.txt  package.xml
hw4/hw4/hw4/src/find_substring_positions_nodes/: setup.cfg
hw4/hw4/src/find_substring_positions_interfaces/: package.xml
hw4/hw4/src/find_substring_positions_nodes/: package.xml  setup.py
hw4/hw4/src/find_substring_positions_nodes/find_substring_positions_nodes/: find_substring_positions_client.py  find_substring_positions_server.py
hw4/src/find_substring_positions_interfaces/: package.xml
hw4/src/find_substring_positions_nodes/: package.xml  setup.py
ros2_hw2(дз3+тесты)/ros2_hw2/install/: setup.sh
ros2_hw2(дз3+тесты)/ros2_hw2/src/number_converter/: CMakeLists.txt
ros2_hw2(дз3+тесты)/ros2_hw2/src/number_converter_py/: setup.py
ros2_hw2/install/number_converter/share/number_converter/: package.ps1
ros2_hw2/ros2_hw2/install/: local_setup.sh
ros2_hw2/src/number_converter_py/: setup.cfg  setup.py
ros2_hw2/src/number_converter_py/number_converter_py/: server.py
дз2+тесты/install/: local_setup.sh
дз2+тесты/src/hw1_pkg/: setup.py
дз2+тесты/src/hw1_pkg/hw1_pkg/: prime_divisors_subscriber.py
дз2+тесты/src/hw1_pkg/test/: test_hw2_publisher.py
(+74 files in other folders)
