<?xml version="1.0"?>
<package format="3">
  <name>hw1_pkg</name>
  <version>0.1.0</version>
  <description></description>
  <maintainer email="">li</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>