<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>find_substring_positions_nodes</name>
  <version>0.0.1</version>
  <description>сервер и клиент для поиска вхождений подстроки</description>
  <maintainer email="li@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>action_msgs</depend>
  <depend>find_substring_positions_interfaces</depend>
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
